--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h1>PRANKED</h1>
 <h3>(there is no maybe-not smoothie club)</h3>
 
-<link href="./stylesheet.css"></link>
+<link rel="stylesheet" type="text/css" href="./stylesheet.css">
 </body>
 </html>
