--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>PRANKED</h1>
-<h3>(there is no maybe-not smoothie club)</h3>
+<asdf>LMAO what a prank</asdf>
+<h3>(there is no maybe-not smoothie club, yeah sorry bro no no-smoothies. But you can talk to McKenzi for smoothie club info. Catchya l8er dawg)</h3>
 
 <link rel="stylesheet" type="text/css" href="./stylesheet.css">
 </body>
