--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<asdf>LMAO what a prank</asdf>
+<h1>LMAO what a prank</h1>
 <h3>(there is no maybe-not smoothie club, yeah sorry bro no no-smoothies. But you can talk to McKenzi for smoothie club info. Catchya l8er dawg)</h3>
 
 <link rel="stylesheet" type="text/css" href="./stylesheet.css">
