--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Nomononosmoodieclubsurrybruther!!@!</title>
 </head>
 <body>
 
-<h1>LMAO what a prank</h1>
-<h3>(there is no maybe-not smoothie club, yeah sorry bro no no-smoothies. But you can talk to McKenzi for smoothie club info. Catchya l8er dawg)</h3>
+<h1>LMAO what a pra!!!nk</h1>
+<h3>(there is no maybe-not smoothi!!e club, yeah sorry bro no no-!!!smoothies. But you can talk to McKenzi for smoothie club info!!!! Catchya l8er dawg)!!!</h3
+  >
 
 <link rel="stylesheet" type="text/css" href="./stylesheet.css">
 </body>
